Added some more styling

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,16 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+    body {
+      background-image: url('images/musical-notes-frame-with-text-space_1017-32857.webp');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-repeat: repeat-y;
+      background-size: 150%;
+    }
+    
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
